kube/deploy/infra/monitoring/alerting/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &n vmalertmanager-main
spec:
  routes:
    - match: Host(`alert.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *n
          port: 9093
      middlewares:
        - name: authelia-authz
          namespace: traefik
  tls:
    secretName: tls-cert-alert.${EXTERNAL_DOMAIN}
    domains:
      - main: alert.${EXTERNAL_DOMAIN}
